// Diameter S13/S13' Interface Application
// Based on 3GPP TS 29.272 v16.5.0
// Interface between MME/SGSN and EIR (Equipment Identity Register)

syntax = "diameter1";

package diameter.s13;

option go_package = "github.com/hsdfat8/diam-gw/commands/s13";

// ================================================================================
//                         APPLICATION IDENTIFIER
// ================================================================================
// S13/S13' Application ID: 16777252 (allocated by IANA)
// Vendor ID: 10415 (3GPP)

const S13_APPLICATION_ID = 16777252;
const VENDOR_ID_3GPP = 10415;

// ================================================================================
//                         COMMAND CODE VALUES
// ================================================================================
// Table 7.2.2/2: Command-Code values for S13/S13'

const ECR_COMMAND_CODE = 324;  // ME-Identity-Check-Request/Answer

// ================================================================================
//                         ENUMERATED VALUE DEFINITIONS
// ================================================================================

// Equipment-Status (AVP Code 1445)
// Indicates the status of the mobile equipment
enum EquipmentStatus {
  WHITELISTED = 0;    // Equipment is allowed (on white list)
  BLACKLISTED = 1;    // Equipment is not allowed (on black list)
  GREYLISTED = 2;     // Equipment is under investigation (on grey list)
}

// ================================================================================
//                         EXPERIMENTAL RESULT CODES
// ================================================================================

// S13/S13' Specific Experimental-Result-Code values
// Vendor-Id: 10415 (3GPP)

const DIAMETER_ERROR_USER_UNKNOWN = 5001;
const DIAMETER_ERROR_EQUIPMENT_UNKNOWN = 5422;

// ================================================================================
//                         S13 SPECIFIC AVP DEFINITIONS
// ================================================================================

// Terminal-Information (AVP Code 1401) - Grouped
// Contains information about the mobile equipment being checked
avp Terminal-Information {
  code = 1401;
  vendor_id = 10415;
  type = Grouped;
  must = true;
  may_encrypt = false;
  description = "Contains information about the user's mobile equipment";

  grouped {
    // IMEI: International Mobile Equipment Identity (15 or 16 digits)
    // The EIR uses the first 14 digits (TAC + SNR) for identification
    // The 15th digit (check digit) is ignored by EIR
    // The 16th digit (SVN) is optional
    optional IMEI imei = 1;                        // Code 1402, UTF8String
    
    // 3GPP2-MEID: Mobile Equipment Identifier for 3GPP2 networks
    optional 3GPP2-MEID meid = 2;                  // Code 1471, OctetString
    
    // Software-Version: IMEISV software version (2 digits)
    // May be used by EIR in addition to IMEI for black/grey list checks
    optional Software-Version software_version = 3; // Code 1403, UTF8String
  }
}

// IMEI (AVP Code 1402)
// International Mobile Equipment Identity
// Format: 14-16 digits as UTF8String
// Structure: TAC (8 digits) + SNR (6 digits) + optional CD (1 digit) + optional SVN (2 digits)
avp IMEI {
  code = 1402;
  vendor_id = 10415;
  type = UTF8String;
  must = true;
  may_encrypt = false;
  description = "International Mobile Equipment Identity (IMEI)";
}

// Software-Version (AVP Code 1403)
// Software Version Number from IMEISV
// Format: 2 digits as UTF8String
avp Software-Version {
  code = 1403;
  vendor_id = 10415;
  type = UTF8String;
  must = true;
  may_encrypt = false;
  description = "Software version number of mobile equipment (from IMEISV)";
}

// 3GPP2-MEID (AVP Code 1471)
// Mobile Equipment Identifier for 3GPP2 networks
// Format: 56 bits as OctetString
avp 3GPP2-MEID {
  code = 1471;
  vendor_id = 10415;
  type = OctetString;
  must = true;
  may_encrypt = false;
  description = "Mobile Equipment Identifier for 3GPP2 networks";
}

// Equipment-Status (AVP Code 1445)
// Result of the ME identity check
avp Equipment-Status {
  code = 1445;
  vendor_id = 10415;
  type = Enumerated;
  must = true;
  may_encrypt = false;
  description = "Status of the mobile equipment from EIR check";
  // Values:
  //   0 = WHITELISTED - Equipment is on white list (allowed)
  //   1 = BLACKLISTED - Equipment is on black list (not allowed, e.g., stolen)
  //   2 = GREYLISTED  - Equipment is on grey list (under investigation)
}

// ================================================================================
//                         COMMAND DEFINITIONS
// ================================================================================

// ================================================================================
// ME-Identity-Check-Request (ECR) - Command Code 324
// 3GPP TS 29.272 Section 7.2.19
// Sent from MME/SGSN to EIR
// Purpose: Check if the Mobile Equipment identity (IMEI) is valid
// ================================================================================
command ME-Identity-Check-Request {
  code = 324;
  application_id = 16777252;
  request = true;
  proxiable = true;
  description = "Request to check mobile equipment identity against EIR";

  // Required AVPs
  fixed required Session-Id session_id = 1;
  fixed required Auth-Session-State auth_session_state = 2;  // Must be NO_STATE_MAINTAINED
  fixed required Origin-Host origin_host = 3;                // MME/SGSN identity
  fixed required Origin-Realm origin_realm = 4;              // MME/SGSN realm
  fixed required Destination-Realm destination_realm = 5;    // EIR realm
  fixed required Terminal-Information terminal_information = 6;  // Contains IMEI

  // Optional AVPs
  optional DRMP drmp = 7;                                    // Diameter Routing Message Priority
  optional Vendor-Specific-Application-Id vendor_specific_application_id = 8;
  optional Destination-Host destination_host = 9;            // Specific EIR host
  optional User-Name user_name = 10;                         // IMSI (optional, for operator purposes)
  repeated optional AVP avp = 11;                            // Additional AVPs
  repeated optional Proxy-Info proxy_info = 12;              // Proxy state information
  repeated optional Route-Record route_record = 13;          // Route tracking
}

// ================================================================================
// ME-Identity-Check-Answer (ECA) - Command Code 324
// 3GPP TS 29.272 Section 7.2.20
// Sent from EIR to MME/SGSN
// Purpose: Return the equipment status (whitelisted/blacklisted/greylisted)
// ================================================================================
command ME-Identity-Check-Answer {
  code = 324;
  application_id = 16777252;
  request = false;
  proxiable = true;
  description = "Response to ME identity check with equipment status";

  // Required AVPs
  fixed required Session-Id session_id = 1;
  fixed required Auth-Session-State auth_session_state = 2;  // Must be NO_STATE_MAINTAINED
  fixed required Origin-Host origin_host = 3;                // EIR identity
  fixed required Origin-Realm origin_realm = 4;              // EIR realm

  // Conditional AVPs
  // Result-Code: Success (DIAMETER_SUCCESS = 2001) or base protocol errors
  // Experimental-Result: S13/S13' specific errors (Equipment Unknown)
  optional Result-Code result_code = 5;
  optional Experimental-Result experimental_result = 6;
  
  // Equipment-Status: Present only if Result-Code is DIAMETER_SUCCESS
  // Indicates WHITELISTED(0), BLACKLISTED(1), or GREYLISTED(2)
  optional Equipment-Status equipment_status = 7;

  // Optional AVPs
  optional DRMP drmp = 8;
  optional Vendor-Specific-Application-Id vendor_specific_application_id = 9;
  repeated optional AVP avp = 10;
  optional Failed-AVP failed_avp = 11;                       // AVPs causing failure
  repeated optional Proxy-Info proxy_info = 12;
  repeated optional Route-Record route_record = 13;
}

// ================================================================================
//                         USAGE NOTES
// ================================================================================
//
// 1. SESSION HANDLING:
//    - S13/S13' uses implicitly terminated sessions
//    - Auth-Session-State MUST be set to NO_STATE_MAINTAINED (1)
//    - No session termination or re-authorization messages are used
//
// 2. IMEI CHECKING:
//    - EIR identifies equipment using first 14 digits of IMEI (TAC + SNR)
//    - 15th digit (check digit) is ignored by EIR
//    - Software-Version may optionally be used for enhanced checking
//
// 3. RESULT HANDLING:
//    Result-Code = DIAMETER_SUCCESS (2001):
//      - Equipment-Status AVP will be present
//      - MME/SGSN decides action based on status:
//        * WHITELISTED: Allow attachment
//        * BLACKLISTED: Reject attachment
//        * GREYLISTED: Operator policy dependent
//
//    Experimental-Result-Code = DIAMETER_ERROR_EQUIPMENT_UNKNOWN (5422):
//      - Equipment not found in any list
//      - Equipment-Status will NOT be present
//      - MME/SGSN may reject attachment based on operator policy
//
// 4. TRANSPORT:
//    - S13/S13' uses SCTP as transport protocol
//    - Port: 3868 (Diameter standard port)
//
// 5. SECURITY:
//    - IPsec should be used for secure transport
//    - See 3GPP TS 33.210 for security requirements
//
// ================================================================================
//                         MESSAGE FLOW EXAMPLE
// ================================================================================
//
//     MME/SGSN                                    EIR
//         |                                        |
//         |  1. ECR (IMEI in Terminal-Information) |
//         |--------------------------------------->|
//         |                                        |
//         |    (EIR checks IMEI against lists)     |
//         |                                        |
//         |  2. ECA (Equipment-Status=WHITELISTED) |
//         |<---------------------------------------|
//         |                                        |
//         | (MME/SGSN allows UE attachment)        |
//         |                                        |
//
// ================================================================================
//                         GROUPED AVP STRUCTURE SUMMARY
// ================================================================================
//
// Terminal-Information (1401):
//   +-- IMEI (1402)              [Optional, UTF8String]
//   +-- 3GPP2-MEID (1471)        [Optional, OctetString]
//   +-- Software-Version (1403)  [Optional, UTF8String]
//
// Experimental-Result (297) - Base Protocol:
//   +-- Vendor-Id (266)                    [Required, Unsigned32] = 10415
//   +-- Experimental-Result-Code (298)     [Required, Unsigned32]
//
// ================================================================================
//                         RELATED SPECIFICATIONS
// ================================================================================
//
// - 3GPP TS 29.272: S6a/S6d and S13/S13' interface specification
// - 3GPP TS 23.003: Numbering, addressing and identification (IMEI format)
// - 3GPP TS 22.016: International Mobile station Equipment Identities (IMEI)
// - 3GPP TS 23.401: GPRS enhancements for E-UTRAN access
// - 3GPP TS 33.210: Network Domain Security (NDS)
// - RFC 6733: Diameter Base Protocol
//
// ================================================================================
